<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.naturtalent.s8scanning.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/camera_zoom"
        android:orderInCategory="101"
        android:title="@string/camera_zoom"
        android:icon="@drawable/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/start_accesspoint"
        android:orderInCategory="101"
        android:title="@string/start_accesspoint"
        app:showAsAction="never" />

    <item
        android:id="@+id/stop_accesspoint"
        android:orderInCategory="101"
        android:title="@string/stop_accesspoint"
        app:showAsAction="never" />

    <item
        android:id="@+id/wifi_connection"
        android:orderInCategory="101"
        android:title="@string/wifi_connection"
        app:showAsAction="never" />

    <item android:id="@+id/start_action"
        android:title="@string/start_scanning"
        android:icon="@drawable/play"
        app:showAsAction="always" />

    <item android:id="@+id/stop_action"
        android:title="@string/stop_scanning"
        android:icon="@drawable/stop"
        app:showAsAction="always" />

    <item
        android:id="@+id/auto_focus"
        android:icon="@drawable/af"
        android:title="@string/focus"
        app:showAsAction="always" />

    <item
        android:id="@+id/auto_exposure"
        android:icon="@drawable/ae"
        android:title="@string/exposure"
        app:showAsAction="always" />

    <item android:id="@+id/aspect_ratio"
        android:title="@string/aspect_ratio"
        android:icon="@drawable/aspect_ratio"
        app:showAsAction="always" />

</menu>